# cpp_project_template

./: CMakeLists.txt  main.cpp
include/: calculator.h  common_data.h
scripts/: advanced.sh  build.sh  check.sh  control.sh  deploy.sh  greet.sh  hello.sh  loop.sh  modular.sh  run.sh
src/: async_future.cpp  atomic_counter.cpp  calculator.cpp  fork_intro.cpp  main.cpp  main_threads.cpp  manual_future.cpp  multi_threading_intro.cpp  multi_threading_safe.cpp  pipe_ipc.cpp  producer_consumer.cpp  shm_reader.cpp  shm_writer.cpp  tcp_chatroom_client.cpp  tcp_chatroom_server.cpp  tcp_concurrent_server.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp
